# bevy-3d-test

./: .gitignore  Cargo.toml  README.md  index.html
assets/: dungeon.glb  dungeon.gltf
src/: lib.rs  main.rs  player.rs  ui.rs
