[package]
name = "bevy-3d-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for depencencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8.1", features = ["dynamic"] } # https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional
