[package]
name = "bevy-3d-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 's'
lto= "thin"

# Enable high optimizations for depencencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
#bevy = {version = "0.9.0", features = ["dynamic"] } # https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional
bevy = "0.9.0"
bevy_egui = "0.17.1"
# bevy_rapier3d = "0.18.0"
bevy_rapier3d = {git = "https://github.com/devil-ira/bevy_rapier", branch = "bevy-0.9"}
console_error_panic_hook = "0.1.7"